# node-addon-example

./: .gitignore  CMakeLists.txt  README.md  index.js  package.json
cppsrc/: WeightWrapper.hpp  helloworld.hpp  main.cpp  weight.hpp
